# FigureForge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: PyPI-publish.yml
FigureForge/: __init__.py  bug_report_dialog.py  color_button.py  custom_spinbox.py  dict_property.py  export_figure_dialog.py  figure_explorer.py  figure_manager.py  gui.py  main.py  preferences.py  property_inspector.py  structure.json  tuple_property.py  utils.py
FigureForge/dialogs/: about_dialog.py  bug_report_dialog.py  export_figure_dialog.py  ff_dialogs.py  new_plugin_dialog.py  save_work_dialog.py  update_check.py  welcome_dialog.py
FigureForge/plugins/: __init__.py  add_annotation.py  add_legend.py  add_minor_data_ticks.py  example.py  plugin_requirements.txt  reduce_tick_limits.py  set_spine_bounds.py  toggle_spines.py
FigureForge/plugins/utils/: add_annotations_dialog.py  add_legend_dialog.py  custom_spinbox.py  select_spines_dialog.py
FigureForge/resources/templates/: plugin_template.py
FigureForge/widgets/: dict_property.py  ff_widgets.py  tuple_property.py
tests/: demo_figure.py  test_exposed_plugins.py  tests.py
