[tool.poetry]
name = "FigureForge"
version = "0.1.0-alpha"
description = ""
authors = ["Noah Gula <noahrgula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
PySide6 = "^6.7.2"
importlib = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
FigureForge = "FigureForge.main:main"